B&L QA/objects/Contact_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Phaco_Technique__c</fullName>
        <description>Surgeon&apos;s primary/preferred phaco technicque. 
Used by EMEA SU. and USSUR</description>
        <label>Phaco Technique</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;or = 2.8mm</fullName>
                </value>
                <value>
                    <fullName>2.2 mm Coax</fullName>
                </value>
                <value>
                    <fullName>B-Mics</fullName>
                </value>
                <value>
                    <fullName>C-Mics</fullName>
                </value>
                <value>
                    <fullName>Chop</fullName>
                </value>
                <value>
                    <fullName>Divide &amp; Conquer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Polishes_Anterior_Capsule__c</fullName>
        <description>CCP</description>
        <label>Polishes Anterior Capsule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Whitman</fullName>
                </value>
                <value>
                    <fullName>Pepose</fullName>
                </value>
                <value>
                    <fullName>I/A</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Polishes_Posterior_Capsule__c</fullName>
        <description>CCP</description>
        <label>Polishes Posterior Capsule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Terry Squeegie</fullName>
                </value>
                <value>
                    <fullName>Curette</fullName>
                </value>
                <value>
                    <fullName>Irrigation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_op_instructions_in_sx_kit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CCP</description>
        <label>Post-op instructions in sx kit?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_load_into_Phoropter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CCP</description>
        <label>Pre-load into Phoropter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preference_for_Daily_Modality__c</fullName>
        <label>Preference for Daily Modality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Does Not Fit</fullName>
                </value>
                <value>
                    <fullName>Problem Solves</fullName>
                </value>
                <value>
                    <fullName>Promotes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Premium_IOL_Conversion__c</fullName>
        <description>USSUR IOL Conversion percentage for this contact</description>
        <label>Premium IOL Conversion %</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Premium_IOL_Volume__c</fullName>
        <description>Average volume of premium IOL procedures performed by this surgeon.
Used by EMEA SU. and USSUR</description>
        <inlineHelpText>Annual</inlineHelpText>
        <label>Premium IOL Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Premium_IOL__c</fullName>
        <description>Premium IOL used by this contact (primary)
Used by USSUR</description>
        <label>Premium IOL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ReStor</fullName>
                </value>
                <value>
                    <fullName>Rezoom</fullName>
                </value>
                <value>
                    <fullName>Tecnis MF</fullName>
                </value>
                <value>
                    <fullName>Acri.Tec</fullName>
                </value>
                <value>
                    <fullName>Human Optics</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Crystalens HD</fullName>
                </value>
                <value>
                    <fullName>Crystalens AO</fullName>
                </value>
                <value>
                    <fullName>Crystalens 5.0</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>PhysIOL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Equipment_Used__c</fullName>
        <description>This surgeon&apos;s primary/preferred equipment.
Used by EMEA SU.</description>
        <label>Primary Equipment Used</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accurus</fullName>
                </value>
                <value>
                    <fullName>Assistant (Optikon)</fullName>
                </value>
                <value>
                    <fullName>Associate (DORC)</fullName>
                </value>
                <value>
                    <fullName>CataRhex (Oertli)</fullName>
                </value>
                <value>
                    <fullName>Constellation</fullName>
                </value>
                <value>
                    <fullName>Infiniti</fullName>
                </value>
                <value>
                    <fullName>Legacy</fullName>
                </value>
                <value>
                    <fullName>Geuder - Megatron</fullName>
                </value>
                <value>
                    <fullName>Megatron S3 (Geuder)</fullName>
                </value>
                <value>
                    <fullName>Millennium Anterior</fullName>
                </value>
                <value>
                    <fullName>Millennium Combo</fullName>
                </value>
                <value>
                    <fullName>Open (Corneal)</fullName>
                </value>
                <value>
                    <fullName>OS3 (Oertli)</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Pentasys</fullName>
                </value>
                <value>
                    <fullName>Pulsar (Optikon)</fullName>
                </value>
                <value>
                    <fullName>Ruck</fullName>
                </value>
                <value>
                    <fullName>Signature AMO</fullName>
                </value>
                <value>
                    <fullName>Sovereign</fullName>
                </value>
                <value>
                    <fullName>Sovereign Compact</fullName>
                </value>
                <value>
                    <fullName>Sovereign Signature</fullName>
                </value>
                <value>
                    <fullName>Stellaris</fullName>
                </value>
                <value>
                    <fullName>Stellaris PC</fullName>
                </value>
                <value>
                    <fullName>Millenium</fullName>
                </value>
                <value>
                    <fullName>Universal</fullName>
                </value>
                <value>
                    <fullName>Нет</fullName>
                </value>
                <value>
                    <fullName>Lauret</fullName>
                </value>
                <value>
                    <fullName>Oertli</fullName>
                </value>
                <value>
                    <fullName>Oertli - Pharo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_IOL__c</fullName>
        <description>Tracks the primary IOL in use by the contact Used by USSUR</description>
        <label>Primary IOL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AcriTec</fullName>
                </value>
                <value>
                    <fullName>Acrysof</fullName>
                </value>
                <value>
                    <fullName>Acrysof IQ</fullName>
                </value>
                <value>
                    <fullName>Acrysof Natural</fullName>
                </value>
                <value>
                    <fullName>Afinity</fullName>
                </value>
                <value>
                    <fullName>Akreos</fullName>
                </value>
                <value>
                    <fullName>Akreos AO</fullName>
                </value>
                <value>
                    <fullName>Akreos MICS</fullName>
                </value>
                <value>
                    <fullName>Corneal</fullName>
                </value>
                <value>
                    <fullName>Crystalens</fullName>
                </value>
                <value>
                    <fullName>Elastimide</fullName>
                </value>
                <value>
                    <fullName>Hoya</fullName>
                </value>
                <value>
                    <fullName>I Symm</fullName>
                </value>
                <value>
                    <fullName>MI60</fullName>
                </value>
                <value>
                    <fullName>Nano-Flex</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>PhysIOL</fullName>
                </value>
                <value>
                    <fullName>Rayner</fullName>
                </value>
                <value>
                    <fullName>Restor+3</fullName>
                </value>
                <value>
                    <fullName>Sensar</fullName>
                </value>
                <value>
                    <fullName>SofPort</fullName>
                </value>
                <value>
                    <fullName>Tecnis</fullName>
                </value>
                <value>
                    <fullName>Tecnis CL</fullName>
                </value>
                <value>
                    <fullName>Tecnis MTF</fullName>
                </value>
                <value>
                    <fullName>Tecnis W/OptiEdge</fullName>
                </value>
                <value>
                    <fullName>Zeiss-IOLtech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_IOL_percent__c</fullName>
        <label>Primary IOL %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Incision_Blade_Size_in_MM__c</fullName>
        <inlineHelpText>What is the size in mm of the Primary Incision Blade the Surgeon uses?</inlineHelpText>
        <label>Primary Incision Blade Size in MM</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Incision_Blade__c</fullName>
        <description>USSUR</description>
        <inlineHelpText>What Primary Incision Blade does this Surgeon use?</inlineHelpText>
        <label>Primary Incision Blade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Steel - B+L</fullName>
                </value>
                <value>
                    <fullName>Steel - Novartis (Alcon)</fullName>
                </value>
                <value>
                    <fullName>Steel - Diamatrix</fullName>
                </value>
                <value>
                    <fullName>Steel - BD</fullName>
                </value>
                <value>
                    <fullName>Steel - Sharpoint</fullName>
                </value>
                <value>
                    <fullName>Steel - Visitec</fullName>
                </value>
                <value>
                    <fullName>Steel - Other</fullName>
                </value>
                <value>
                    <fullName>Diamond - Storz (B+L)</fullName>
                </value>
                <value>
                    <fullName>Diamond - Duckworth &amp; Kent</fullName>
                </value>
                <value>
                    <fullName>Diamond - Diamatrix</fullName>
                </value>
                <value>
                    <fullName>Diamond - Rhein</fullName>
                </value>
                <value>
                    <fullName>Diamond - Other</fullName>
                </value>
                <value>
                    <fullName>Femto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Instrument_Used_in_Phaco__c</fullName>
        <description>USSUR</description>
        <inlineHelpText>What is the Primary Instrument that this Surgeon uses in Phaco?</inlineHelpText>
        <label>Primary Instrument Used in Phaco</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Monofocal_IOL__c</fullName>
        <description>USSUR - Surgical Preferences</description>
        <inlineHelpText>Select the Surgeon&apos;s Primary Monofocal IOL</inlineHelpText>
        <label>Primary Monofocal IOL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B+L - MI60</fullName>
                </value>
                <value>
                    <fullName>B+L - AO60</fullName>
                </value>
                <value>
                    <fullName>B+L - EnVista</fullName>
                </value>
                <value>
                    <fullName>B+L - LI61AO</fullName>
                </value>
                <value>
                    <fullName>B+L - LI61SE</fullName>
                </value>
                <value>
                    <fullName>B+L - Other</fullName>
                </value>
                <value>
                    <fullName>Novartis/Alcon - SN60AT</fullName>
                </value>
                <value>
                    <fullName>Novartis/Alcon - Other</fullName>
                </value>
                <value>
                    <fullName>Abbott/AMO - ZCBOO</fullName>
                </value>
                <value>
                    <fullName>Abbott/AMO - Tecnis Silicone</fullName>
                </value>
                <value>
                    <fullName>Abbott/AMO - Tecnis 3-piece</fullName>
                </value>
                <value>
                    <fullName>Abbott/AMO - Other</fullName>
                </value>
                <value>
                    <fullName>Lenstec - Softec</fullName>
                </value>
                <value>
                    <fullName>Lenstec - Softec HD</fullName>
                </value>
                <value>
                    <fullName>Lenstec - Other</fullName>
                </value>
                <value>
                    <fullName>Hoya - Other</fullName>
                </value>
                <value>
                    <fullName>Other - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Timeframe__c</fullName>
        <label>Primary Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>&lt;3 months</fullName>
                </value>
                <value>
                    <fullName>3-6 months</fullName>
                </value>
                <value>
                    <fullName>6-12 months</fullName>
                </value>
                <value>
                    <fullName>1-2 years</fullName>
                </value>
                <value>
                    <fullName>2+ years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Viscoelastic__c</fullName>
        <description>USSUR - Surgical Preferences</description>
        <inlineHelpText>Select the Surgeon&apos;s Primary Viscoelastic</inlineHelpText>
        <label>Primary Viscoelastic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B+L - Amvisc Plus</fullName>
                </value>
                <value>
                    <fullName>B+L - Amvisc</fullName>
                </value>
                <value>
                    <fullName>B+L - Ocucoat</fullName>
                </value>
                <value>
                    <fullName>Novartis(Alcon) - Viscoat</fullName>
                </value>
                <value>
                    <fullName>Novartis(Alcon) - Provisc</fullName>
                </value>
                <value>
                    <fullName>Novartis(Alcon) - Duovisc</fullName>
                </value>
                <value>
                    <fullName>Novartis(Alcon) - Discovisc</fullName>
                </value>
                <value>
                    <fullName>Novartis(Alcon) - Cellugel</fullName>
                </value>
                <value>
                    <fullName>Abbott(AMO) - Healon</fullName>
                </value>
                <value>
                    <fullName>Abbott(AMO) - Healon GV</fullName>
                </value>
                <value>
                    <fullName>Abbott(AMO) - Healon Endocoat</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Protein_Management__c</fullName>
        <description>ECS</description>
        <label>Protein Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReNu_Fresh_Pct__c</fullName>
        <defaultValue>0</defaultValue>
        <description>ECS</description>
        <label>ReNu Fresh %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ReNu_Sensitive_Pct__c</fullName>
        <defaultValue>0</defaultValue>
        <description>ECS</description>
        <label>ReNu Sensitive %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Recommends_using_1_50_s__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CCP</description>
        <label>Recommends using +1.50’s?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Records_Lens_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CCP</description>
        <label>Records Lens Position?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rotates_Lens__c</fullName>
        <description>CCP</description>
        <label>Rotates Lens?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>At least 90 degrees</fullName>
                </value>
                <value>
                    <fullName>More than 90 degrees</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sculpting_Aspiration_Flow_in_cc_min__c</fullName>
        <description>USSUR</description>
        <inlineHelpText>Enter the Phace Sculpting Aspiration Flow in cc/min</inlineHelpText>
        <label>Sculpting Aspiration Flow in cc/min</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sculpting_Bottle_Height_in_cm__c</fullName>
        <description>USSUR</description>
        <inlineHelpText>Enter the Phaco Sculpting Bottle Height in cm</inlineHelpText>
        <label>Sculpting Bottle Height in cm</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sculpting_Power__c</fullName>
        <description>USSUR</description>
        <inlineHelpText>Enter the Phaco Sculping Power Percent</inlineHelpText>
        <label>Sculpting Power</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sculpting_Vacuum_in_mmHg__c</fullName>
        <description>USSUR</description>
        <inlineHelpText>Enter the Phaco Sculpting Vacuum in mmHg</inlineHelpText>
        <label>Sculpting Vacuum in mmHg</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Second_Choice_Brand_Daily_Disposable__c</fullName>
        <label>Second Choice Brand - Daily Disposable</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>First_Choice_Brand_Daily_Disposable__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1-day Acuvue</fullName>
                </value>
                <value>
                    <fullName>1-day Acuvue Moist</fullName>
                </value>
                <value>
                    <fullName>Clearsight 1-day</fullName>
                </value>
                <value>
                    <fullName>Dailies Aqua Comfort Plus</fullName>
                </value>
                <value>
                    <fullName>Focus Dailies</fullName>
                </value>
                <value>
                    <fullName>Proclear 1-day</fullName>
                </value>
                <value>
                    <fullName>SofLens Daily Disposable</fullName>
                </value>
                <value>
                    <fullName>Biomedics One Day</fullName>
                </value>
                <value>
                    <fullName>Acuvue True Eyes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Choice_Brand_Lens_Care__c</fullName>
        <label>Second Choice Brand - Lens Care</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>First_Choice_Brand_Lens_Care__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ReNu</fullName>
                </value>
                <value>
                    <fullName>Refresh</fullName>
                </value>
                <value>
                    <fullName>Express</fullName>
                </value>
                <value>
                    <fullName>Clear Care</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Equate</fullName>
                </value>
                <value>
                    <fullName>Other PL</fullName>
                </value>
                <value>
                    <fullName>Opti Free RepleniSH</fullName>
                </value>
                <value>
                    <fullName>ReNu MultiPlus</fullName>
                </value>
                <value>
                    <fullName>Solo Care Aqua</fullName>
                </value>
                <value>
                    <fullName>Complete Easy Rub</fullName>
                </value>
                <value>
                    <fullName>Sensitive Eyes MPS</fullName>
                </value>
                <value>
                    <fullName>Opti Free Express</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Choice_Brand_MultiFocal__c</fullName>
        <label>Second Choice Brand - MultiFocal</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>First_Choice_Brand_MultiFocal__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Acuvue Bifocal</fullName>
                </value>
                <value>
                    <fullName>Acuvue Oasys for Presbyopia</fullName>
                </value>
                <value>
                    <fullName>Air Optix Aqua Multifocal</fullName>
                </value>
                <value>
                    <fullName>Biomedics/Proclear EP</fullName>
                </value>
                <value>
                    <fullName>Frequency 55 Multifocal</fullName>
                </value>
                <value>
                    <fullName>Proclear Multifocal</fullName>
                </value>
                <value>
                    <fullName>Purevision Multi-Focal</fullName>
                </value>
                <value>
                    <fullName>SofLens Multi-Focal</fullName>
                </value>
                <value>
                    <fullName>Proclear Multifocal Toric</fullName>
                </value>
                <value>
                    <fullName>Focus Progressives</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Choice_Brand_SVS__c</fullName>
        <label>Second Choice Brand - SVS</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>First_Choice_Brand_SVS__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Acuvue 2</fullName>
                </value>
                <value>
                    <fullName>Acuvue Advance</fullName>
                </value>
                <value>
                    <fullName>Acuvue Oasys</fullName>
                </value>
                <value>
                    <fullName>Air Optix Aqua</fullName>
                </value>
                <value>
                    <fullName>Air Optix Night &amp; Day Aqua</fullName>
                </value>
                <value>
                    <fullName>Avaira</fullName>
                </value>
                <value>
                    <fullName>Biofinity</fullName>
                </value>
                <value>
                    <fullName>Biomedics 55</fullName>
                </value>
                <value>
                    <fullName>Frequency 55</fullName>
                </value>
                <value>
                    <fullName>O2Optix</fullName>
                </value>
                <value>
                    <fullName>Proclear Compatibles</fullName>
                </value>
                <value>
                    <fullName>PureVision SVS</fullName>
                </value>
                <value>
                    <fullName>SofLens 38</fullName>
                </value>
                <value>
                    <fullName>Encore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Choice_Brand_Spherical__c</fullName>
        <label>Second Choice Brand - Spherical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acuvue 2</fullName>
                </value>
                <value>
                    <fullName>Acuvue Advance</fullName>
                </value>
                <value>
                    <fullName>Acuvue Oasys</fullName>
                </value>
                <value>
                    <fullName>Air Optix Aqua</fullName>
                </value>
                <value>
                    <fullName>Air Optix Night &amp; Day Aqua</fullName>
                </value>
                <value>
                    <fullName>Avaira</fullName>
                </value>
                <value>
                    <fullName>Biofinity</fullName>
                </value>
                <value>
                    <fullName>Biomedics 55</fullName>
                </value>
                <value>
                    <fullName>Frequency 55</fullName>
                </value>
                <value>
                    <fullName>O2Optix</fullName>
                </value>
                <value>
                    <fullName>Proclear Compatibles</fullName>
                </value>
                <value>
                    <fullName>PureVision SVS</fullName>
                </value>
                <value>
                    <fullName>SofLens 38</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Choice_Brand_Toric__c</fullName>
        <label>Second Choice Brand - Toric</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>First_Choice_Brand_Toric__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Acuvue Advance for Astigmatism</fullName>
                </value>
                <value>
                    <fullName>Acuvue Oasys for Astigmatism</fullName>
                </value>
                <value>
                    <fullName>Acuvue Toric</fullName>
                </value>
                <value>
                    <fullName>Air Optix for Astigmatism</fullName>
                </value>
                <value>
                    <fullName>Biomedics 55 Toric</fullName>
                </value>
                <value>
                    <fullName>Biofinity Toric</fullName>
                </value>
                <value>
                    <fullName>Clearsight 1 Day Toric</fullName>
                </value>
                <value>
                    <fullName>Focus Dailies Toric</fullName>
                </value>
                <value>
                    <fullName>Focus Toric</fullName>
                </value>
                <value>
                    <fullName>Frequency 55 Toric</fullName>
                </value>
                <value>
                    <fullName>Preference Toric</fullName>
                </value>
                <value>
                    <fullName>Proclear Toric</fullName>
                </value>
                <value>
                    <fullName>PureVision Toric</fullName>
                </value>
                <value>
                    <fullName>SofLens Toric</fullName>
                </value>
                <value>
                    <fullName>Vertex Toric</fullName>
                </value>
                <value>
                    <fullName>Focus Torid</fullName>
                </value>
                <value>
                    <fullName>Encore Toric</fullName>
                </value>
                <value>
                    <fullName>Biomedics One Day Toric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>